--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,14 +1,15 @@
-package android
+group 'com.tlt.flutter_zebra_sdk'
+version '1.0-SNAPSHOT'
 
 buildscript {
-    ext.kotlin_version = '1.8.21'  // Updated Kotlin version
+    ext.kotlin_version = '1.5.20'
     repositories {
         google()
-        mavenCentral()  // Replace jcenter (deprecated) with mavenCentral
+        jcenter()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.3.1'  // Updated Gradle version
+        classpath 'com.android.tools.build:gradle:3.5.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
@@ -16,28 +17,33 @@ buildscript {
 rootProject.allprojects {
     repositories {
         google()
-        mavenCentral()  // Replace jcenter (deprecated)
+        jcenter()
     }
 }
 
+apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
+
 android {
     namespace = "com.tlt.flutter_zebra_sdk"
-    compileSdkVersion 33  // Update to a newer version
+    compileSdkVersion 29
 
+    sourceSets {
+        main.java.srcDirs += 'src/main/kotlin'
+    }
     defaultConfig {
-        minSdkVersion 21  // Increase minSdkVersion to 21 (recommended for newer tools)
+        minSdkVersion 16
     }
-
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-
-    kotlinOptions {
-        jvmTarget = "1.8"  // Ensure compatibility
-    }
-
     lintOptions {
         disable 'InvalidPackage'
     }
+}
+
+dependencies {
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    // implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2'
+    // implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.0.1"
+    implementation fileTree(include: '*.jar', dir: 'libs')
+    implementation 'androidx.annotation:annotation:1.1.0'
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
