--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,8 +4,7 @@ version: 0.0.4+2
 homepage: https://github.com/ImTung/flutter_zebra_sdk
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
-  flutter: ">=1.20.0"
+  sdk: ^3.7.2
 
 dependencies:
   flutter:
